tests/snapshots/examples_fixtures/Modules__ink_script.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/Modules/ink_script.flx
== compile ==
failed (module)
== diagnostics ==
error[E018]: Import Not Found

Cannot find module `Modules.Amber.Ink` to import.

  examples/Modules/ink_script.flx:1:1
  |
1 | import Modules.Amber.Ink
  | ^

Hint:
  Check that: 1) The module file exists (e.g., `Modules.Amber.Ink.flx`), 2) The file is in a module root directory (current dir or ./src by default), 3) The module path matches the file structure (e.g., `Foo.Bar` → `Foo/Bar.flx`). Use `--root` flag to add more search paths.
  Looked for module `Modules.Amber.Ink` under roots: //?/examples/Modules, //?/src (imported from //?/examples/Modules/ink_script.flx).
== stdout ==
<not executed>
