tests/snapshots/examples_fixtures/Modules__pipe_with_modules.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/Modules/pipe_with_modules.flx
== compile ==
failed (module)
== diagnostics ==
error[E018]: Import Not Found

Cannot find module `Modules.Math` to import.

  examples/Modules/pipe_with_modules.flx:8:1
  |
8 | import Modules.Math as Math
  | ^

Hint:
  Check that: 1) The module file exists (e.g., `Modules.Math.flx`), 2) The file is in a module root directory (current dir or ./src by default), 3) The module path matches the file structure (e.g., `Foo.Bar` → `Foo/Bar.flx`). Use `--root` flag to add more search paths.
  Looked for module `Modules.Math` under roots: examples/Modules, src, lib (imported from examples/Modules/pipe_with_modules.flx).


error[E018]: Import Not Found

Cannot find module `Modules.StringUtils` to import.

  examples/Modules/pipe_with_modules.flx:9:1
  |
9 | import Modules.StringUtils as StringUtils
  | ^

Hint:
  Check that: 1) The module file exists (e.g., `Modules.StringUtils.flx`), 2) The file is in a module root directory (current dir or ./src by default), 3) The module path matches the file structure (e.g., `Foo.Bar` → `Foo/Bar.flx`). Use `--root` flag to add more search paths.
  Looked for module `Modules.StringUtils` under roots: examples/Modules, src, lib (imported from examples/Modules/pipe_with_modules.flx).

Found 2 errors.
== stdout ==
<not executed>
